# libmolgrid

./: CMakeLists.txt  README.md
.claude/: settings.local.json
cmake/: config.h.in
cmake/Modules/: FindOpenBabel3.cmake
docs/: CMakeLists.txt  index.md  render_notebook.py  tutorials.md
docs/_tutorials/: custom_atom_typer_example.html  grid_single_molecule.html  train_basic_CNN_with_PyTorch.html  train_basic_CNN_with_Tensorflow.html  train_simple_cartesian_reduction.html
docs/cpp/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/cpp/.doctrees/: environment.pickle  index.doctree
docs/cpp/xml/: Doxyfile.xml  atom__typer_8cpp.xml  atom__typer_8h.xml  cartesian__grid_8cpp.xml  cartesian__grid_8h.xml  classlibmolgrid_1_1AtomIndexTypeMapper.xml  classlibmolgrid_1_1AtomIndexTyper.xml  classlibmolgrid_1_1AtomTyper.xml  classlibmolgrid_1_1AtomVectorTyper.xml  classlibmolgrid_1_1BalancedExampleRefProvider.xml  classlibmolgrid_1_1CallbackIndexTyper.xml  classlibmolgrid_1_1CallbackVectorTyper.xml  classlibmolgrid_1_1CartesianGrid.xml  classlibmolgrid_1_1CoordCache.xml  classlibmolgrid_1_1ElementIndexTyper.xml  classlibmolgrid_1_1ExampleDataset.xml  classlibmolgrid_1_1ExampleExtractor.xml  classlibmolgrid_1_1ExampleProvider.xml  classlibmolgrid_1_1ExampleRefProvider.xml  classlibmolgrid_1_1FileAtomMapper.xml  classlibmolgrid_1_1FileMappedElementTyper.xml  classlibmolgrid_1_1FileMappedGninaTyper.xml  classlibmolgrid_1_1GninaIndexTyper.xml  classlibmolgrid_1_1GninaVectorTyper.xml  classlibmolgrid_1_1Grid.xml  classlibmolgrid_1_1GridInterpolater.xml  classlibmolgrid_1_1GridMaker.xml  classlibmolgrid_1_1Grid_3_01Dtype_00_011_00_01isCUDA_01_4.xml  classlibmolgrid_1_1GroupedExampleRefProvider.xml  classlibmolgrid_1_1ManagedGrid.xml  classlibmolgrid_1_1ManagedGridBase.xml  classlibmolgrid_1_1ManagedGrid_3_01Dtype_00_011_01_4.xml  classlibmolgrid_1_1MappedAtomIndexTyper.xml  classlibmolgrid_1_1MetalContext.xml  classlibmolgrid_1_1NullIndexTyper.xml  classlibmolgrid_1_1Quaternion.xml  classlibmolgrid_1_1ReceptorStratifiedExampleRefProvider.xml  classlibmolgrid_1_1SamplingExampleRefProvider.xml  classlibmolgrid_1_1StringCache.xml  classlibmolgrid_1_1SubsetAtomMapper.xml  (+65 more)
docs/python/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/python/.doctrees/: environment.pickle  index.doctree
include/libmolgrid/: common.h  grid.h  grid_interpolater.h  grid_maker.h  libmolgrid.h  managed_grid.h  metal_context.h  quaternion.h  transform.h
python/: CMakeLists.txt  __init__.py  bindings.in.cpp  bindings_grids.cpp
sphinx/cpp/: index.rst
sphinx/python/: conf.py  index.rst
src/: CMakeLists.txt  coord_cache.cpp  coordinateset.cpp  coordinateset_gpu.mm  example.cpp  example_extractor.cpp  grid_interpolater.cpp  grid_interpolater_gpu.mm  grid_maker.cpp  grid_maker_gpu.mm  metal_context.mm  transform_gpu.mm
src/metal/: shaders.metal
test/: CMakeLists.txt  test_grid_mps.mm  test_gridmaker.cpp  test_gridmaker_mps.mm  test_mgrid_mps.mm  test_transform_mps.mm
